data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4027.wast
;; 6. **Excessive Operands Before Indirect Call Test**:    - **Description**: Prepare more operands on the stack than required by the `call_indirect` function type and execute the instruction.    - **Constraint Check**: Only the needed operands should be consumed.    - **Stack Corruption Check**: Ensure that the remaining operands on the stack are correctly positioned post-call.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 0 funcref)
    (func $excessive-operands 
      (i32.const 42) 
      (i32.const 7) 
      (call_indirect (type 0) (i32.const 0))
      (drop)
    )
  )
  "type mismatch"
)